[package]
name = "server"
version = "0.1.0"
authors = ["martin dobrev <martindobrev0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = { version = "0.3", default-features=false}
